[package]
name = "thrussh-example"
version = "0.1.0"
authors = ["startere"]

[dependencies]
thrussh = { git = "https://github.com/redox-os/thrussh" }
thrussh-keys = { git = "https://github.com/redox-os/thrussh" }
env_logger = "0.5.9"
futures = "0.1.21"
tokio = { git = "https://github.com/redox-os/tokio" }
ring = "0.12.1"
